# NN-engine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Layers/: LayerBase.hpp
src/layers/: CMakeLists.txt  DenseLayer.cpp  DenseLayer.hpp  LayerBase.hpp
src/layers/activation/: Activation.hpp  ActivationLayer.cpp  ActivationLayer.hpp  LeakyReLUActivation.hpp  ReLUActivation.hpp  SigmoidActivation.hpp  TanhActivation.hpp
tests/: CMakeLists.txt
tests/layers/: ActivationLayerTest.cpp  DenseLayerTest.cpp
